# twincat-validator-mcp

./: .editorconfig  .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  EXAMPLE_PROMPT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  server.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  llm_pilot_readiness.md
.github/workflows/: publish.yml  release.yml  tests.yml
dxt/: README.md  healthcheck.py  manifest.json
scripts/: build_dxt.py
tests/: __init__.py  conftest.py  test_bug_regressions.py  test_config_loading.py  test_context_pack.py  test_contract_enforcement.py  test_contract_invariants.py  test_determinism_oop_strict.py  test_determinism_regression.py  test_fix_order.py  test_getter_normalization.py  test_golden_files.py  test_idempotency.py  test_issue_locations_contract.py  test_llm_strict_contracts.py  test_motor_control_oop_regressions.py  test_orchestration_contracts_strict.py  test_orchestration_tools.py  test_policy_bypass_regressions.py  test_policy_enforcement_contracts.py  test_policy_linter_tool.py  test_pou_subtype.py  test_profile_modes.py  test_prompts.py  test_smoke_twincat.py
tests/fixtures/: function_no_return_type.TcPOU  function_with_methods.TcPOU  mixed_case_guids.TcPOU  tabs_and_bad_indent.TcPOU  valid_function.TcPOU  valid_interface.TcIO  valid_struct.TcDUT
tests/golden/: .gitattributes  hashes.json  mixed_case_guids.golden  valid_fb.golden  valid_gvl.golden  valid_interface.golden  valid_program.golden  valid_struct.golden
tests/integration/: test_enrichment.py
tests/unit/: test_config_loader.py  test_engines.py  test_file_handler.py  test_intent_profile.py  test_intent_profile_wiring.py  test_knowledge_base.py  test_mcp_responses_policy.py  test_models.py  test_policy_context.py  test_policy_fingerprint.py  test_snippet_extractor.py  test_utils.py
tests/unit/test_checks/: __init__.py  (+12 more)
twincat_validator/: __init__.py  __main__.py  _server_helpers.py  config_loader.py  engines.py  exceptions.py  file_handler.py  mcp_app.py  mcp_resources.py  mcp_responses.py  mcp_tools_batch.py  mcp_tools_fix.py  mcp_tools_orchestration.py  mcp_tools_validation.py  models.py  oop_index.py  policy_context.py  prompts.py  result_contract.py  server.py  snippet_extractor.py  utils.py
twincat_validator/config/: __init__.py  fix_capabilities.json  generation_contract.json  knowledge_base.json  naming_conventions.json  validation_rules.json
twincat_validator/fixers/: __init__.py  base.py  complex_fixes.py  oop_fixes.py  simple_fixes.py  structural_fixes.py
twincat_validator/validators/: __init__.py  base.py  guid_checks.py  naming_checks.py  oop_checks.py  structure_checks.py  style_checks.py  xml_checks.py
(+6 files in other folders)
